Update with Zach files (Not working)

--- a/themes/philter/theme.yaml
+++ b/themes/philter/theme.yaml
@@ -1,5 +1,5 @@
 name: Philter
-description: ''
+description: 'A theme that allows users to upload images, and apply filters to their images.'
 author: 'Luke Noble'
 homepage: ''
 code: ''
