--- a/plugins/lukenoble/philter/plugin.yaml
+++ b/plugins/lukenoble/philter/plugin.yaml
@@ -1,6 +1,15 @@
 plugin:
     name: 'lukenoble.philter::lang.plugin.name'
     description: 'lukenoble.philter::lang.plugin.description'
-    author: 'Luke Noble'
+    author: Zach
     icon: oc-icon-image
     homepage: ''
+navigation:
+    main-menu-item:
+        label: Images
+        url: lukenoble/philter/images
+        icon: icon-photo
+    main-menu-item2:
+        label: Tags
+        url: lukenoble/philter/tags
+        icon: icon-quote-left
