--- a/.htaccess
+++ b/.htaccess
@@ -57,5 +57,13 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 
+    RewriteEngine On  
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    Header always set Access-Control-Allow-Origin "http://localhost:8080"
+    Header always set Access-Control-Allow-Credentials: true
+    Header always set Access-Control-Expose-Headers: "*, Authorization, Cookie"
+    Header always set Access-Control-Request-Headers: "Authorization"
+    Header always set Access-Control-Allow-Headers "Authorization, Cookie"
+    Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
 
 </IfModule>
