--- a/.htaccess
+++ b/.htaccess
@@ -59,6 +59,7 @@
 
     RewriteEngine On  
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    # Header always set Access-Control-Allow-Origin "*"
     Header always set Access-Control-Allow-Origin "http://localhost:8080"
     Header always set Access-Control-Allow-Credentials: true
     Header always set Access-Control-Expose-Headers: "*, Authorization, Cookie"
